# portal-test

./: Makefile.am  README.md  autogen.sh  configure.ac  main.c  meson.build  org.freedesktop.portal.Account.xml  org.freedesktop.portal.GnomeAccounts.xml  org.gnome.PortalTest.desktop  portal-test-app.c  portal-test-app.h  portal-test-win.c  portal-test-win.h  portal-test-win.ui  portal-test.service
flatpak/: build.sh  org.gnome.PortalTest.json  portal-test.json
